<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".FormularioActivity">
    <TextView
        android:id="@+id/tvwTitleForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:text="@string/titleForm"
        android:textColor="#E6A7BC"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNameForm"
        android:layout_width="285dp"
        android:layout_height="53dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="63dp"
        android:ems="10"
        android:hint="@string/nameForm"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvwTitleForm" />

    <EditText
        android:id="@+id/txtMateria"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="63dp"
        android:ems="10"
        android:hint="@string/materiaForm"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameForm" />

    <Button
        android:id="@+id/btnAgendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="153dp"
        android:onClick="registrarExamen"
        android:text="@string/agendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="288dp"
        android:layout_height="98dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="62dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMateria">

        <Button
            android:id="@+id/btnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setFechaAlarma"
            android:text="@string/dateForm" />

        <Button
            android:id="@+id/btnTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setHoraAlarma"
            android:text="@string/timeForm" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>